# stm32h7doom

./: .gitignore  .mxproject  AUDIO_IMPLEMENTATION_PLAN.md  CMakeLists.txt  STM32H750XX_FLASH.ld  STM32H750XX_FLASH_custom.ld  startup_stm32h750xx.s  stm32bootloader.ioc  stm32doom_cube.ioc
App/: CMakeLists.txt  STM32H750XX_FLASH_custom.ld  audio_stm32.c  audio_stm32.h  debug_console.c  debug_console.h  gfx.c  gfx.h  inputoutput.c  inputoutput.h  lcd.c  lcd.h  main.c  main.h  stm32h7xx_hal_conf.h  stm32h7xx_it.c  system_stm32h7xx.c
Common/: CMakeLists.txt  mt25ql512abb.c  mt25ql512abb.h  quadspi.h  syscalls.c
Core/Inc/: debug_console.h  gfx.h  inputoutput.h  inputs.h  lcd.h  main.h  stm32h7xx_hal_conf.h  unique_id.h
Core/Src/: gfx.c  inputoutput.c  inputs.c  lcd.c  main.c  quadspi.c  stm32h7xx_hal_msp.c  stm32h7xx_it.c  unique_id.c
LWIP/App/: lwip.c  lwip.h
USB_HOST/App/: usb_host.c
bootloader/: CMakeLists.txt  STM32H750XX_FLASH_custom.ld  main.c  main.h  stm32h7xx_hal_msp.c  stm32h7xx_it.c
chocdoom/: CMakeLists.txt  aes_prng.c  config.h  d_iwad.c  d_loop.c  d_main.c  deh_io.c  deh_main.c  doomfeatures.h  dummy.c  g_game.c  i_joystick.c  i_main.c  i_opl_stm32.c  i_opl_stm32.h  i_oplmusic.c  i_sound.c  i_sound_stm32.c  i_swap.h  i_swap_stm32.h  i_system.c  i_timer.c  i_video.c  m_config.c  m_controls.c  m_menu.c  m_misc.c  m_misc.h  memio.c  memio.h  midifile.c  midifile.h  net_client.c  net_dedicated.c  net_gui.c  net_lwip.c  net_lwip.h  net_query.c  net_server.c  net_structrw.c  (+4 more)
chocdoom/opl/: opl.c  opl_timer.h  opl_timer_stm32.c
cmake/: gcc-arm-none-eabi.cmake
cmake/stm32cubemx/: CMakeLists.txt
openocd/: stm32h750_qspi.cfg
tools/: create_fatfs.py
